--- a/client-server/views/index.ejs
+++ b/client-server/views/index.ejs
@@ -29,7 +29,7 @@
       <!-- Main Header -->
       <header class="main-header">
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a target="_blank" href class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini">FONSECA SOFTWARE</span>
           <!-- logo for regular state and mobile devices -->
@@ -61,7 +61,7 @@
                     alt="User Image"
                   />
                   <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                  <span class="hidden-xs">Matheus Fonseca</span>
+                  <span class="hidden-xs">Admin</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- The user image in the menu -->
@@ -121,7 +121,7 @@
               />
             </div>
             <div class="pull-left info">
-              <p>Matheus Fonseca</p>
+              <p>Admin</p>
               <!-- Status -->
               <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
             </div>
